Capturar informacion del usuario mediante un formulario

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         </p>
 
         <ul id="errores">
+            <li class='oculto' id="mensaje-nombre"></li>
+            <li class='oculto' id="mensaje-ciudad"></li>
+            <li class='oculto' id="mensaje-descripcion-regalo"></li>
         </ul>
 
         <p>
@@ -105,7 +108,7 @@
     </ul>
 </footer>
 
-<script src="js/main-mio.js"></script>
+<script src="js/main.js"></script>
 <script src="js/pruebas.js"></script>
 </body>
 
